# ap2-ucp-sample

./: .gitignore  DOCS_INDEX.md  MASTERCARD_INTEGRATION.md  MASTERCARD_SETUP.md  MASTERCARD_SUMMARY.md  README.md  UCP-KNOWLEDGE-BASE.md  clean.sh  start-split.sh  stop-split.sh
bkp/trusted-service-python/: .env.example  affinidi_service.py  start.sh
chat-backend/: .env.example  mastercard_client.py  payment_utils.py  pyproject.toml  start.sh  ucp_client.py
enhanced-app/: .env.example  DOCS_INDEX.md  MASTERCARD_INTEGRATION.md  MASTERCARD_SETUP.md  README.md  start-split.sh  start.sh  stop-split.sh  stop.sh
enhanced-app/backend/: main.py
enhanced-app/chat-backend/: ap2_client.py  database.py  loyalty_client.py  main.py  mastercard_client.py  ollama_agent.py  ucp_client.py
enhanced-app/merchant-backend/: ap2_types.py  database.py  main.py  merchant_payment_agent.py  signer_client.py  start.sh
enhanced-app/signer-server/: README.MD  requirements.txt  start.sh
frontend/chat/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/chat/src/: App.tsx  index.css  (+4 more)
frontend/merchant-portal/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
merchant-backend/: .env.example  database.py  loyalty_agent.py  main.py  merchant_payment_agent.py  pyproject.toml  start.sh
signer-server/: README.MD  main.py  test_signer.py
trusted-service/: .env.example  README.md  package-lock.json  package.json  start.sh
trusted-service/src/: affinidi-service.ts  logger.ts  server.ts  test-signer.ts  types.ts
(+16 files in other folders)
