[project]
name = "chat-backend"
version = "1.0.0"
description = "AI Chat Backend with Ollama and UCP Client"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic[email]>=2.12.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "langchain-ollama>=0.1.0",
    "langchain-core>=0.2.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "cryptography>=41.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
